--- a/deploy_to_hf_space.yml
+++ b/deploy_to_hf_space.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           lfs: true
+          fetch-depth: 0
 
       - name: Push to Hugging Face Space
         env:
